<resources>
    <string name="app_name">MUsTracker</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="busschedule">Bus Schedule</string>
    <string name="routeTdy">Route Today</string>
    <string name="buswill">The bus will approximately arrive</string>

    <!-- For page home -->
    <string name="outputText">Getting Values Pls wait..</string>
    <string name="loading">Loading Data ...</string>
    <string name="mahidol">Mahidol University</string>
    <string name="PinkloaS">Pinkloa Station</string>
    <string name="pinkloades">Pinkloa Pork Noodle Station</string>
    <string name="start">Start</string>
    <string name="destination"></string>
    <string name="arrivein">Arrive in</string>
    <string name="spend">Spend</string>

    <!--Default route for translate to Thai-->
    <string name="defaultroute">Default Route</string>
    <string name="satopa">Salaya to Phayathai</string>
    <string name="satosi">Salaya to Siriraj</string>
    <string name="phatosa">Phayathai to Salaya</string>
    <string name="sitosa">Siriraj to Salaya</string>


    <string-array name="routes_list">
        <item>@string/defaultroute</item>
        <item>@string/satopa</item>
        <item>@string/satosi</item>
        <item>@string/phatosa</item>
        <item>@string/sitosa</item>

    </string-array>
    <string name="positionMU">Position in MU</string>

    <string-array name="position_MU">
        <item>Position in MU</item>
        <item>Student</item>
        <item>Teacher</item>
        <item>Staff</item>
    </string-array>

    <!-- Default route for translate to Thai -->
    <string name="routeMU">Default Route</string>
    <string name="stationMU">Default Station</string>
    <string name="defaultstation">Default Station</string>
    <string name="salaya">Salaya</string>
    <string name="phayathai">Phayathai</string>
    <string name="siriraj">Siriraj</string>

    <string-array name="station_MU">
        <item>@string/defaultstation</item>
        <item>@string/salaya</item>
        <item>@string/phayathai</item>
        <item>@string/siriraj</item>
    </string-array>

    <!-- List layout comment -->
    <string name="route">Route:</string>
    <string name="station">Station:</string>
    <string name="round">Round:</string>
    <string name="notify">Notify:</string>

    <!-- For print in list on bus schedule page -->
    <string name="busno">Bus number</string>
    <string name="driver">Driver:</string>
    <string name="tel">Tel:</string>
    <string name="at">At:</string>
    <string name="addDialog1">Do you want to view the bus schedule details or add notification to this route?</string>
    <string name="addnoroute">Add to notify route</string>
    <string name="moreroutede">View schedule details</string>
    
    <!-- For print in create edit route --> 
    <string name="routee">Route</string>
    <string name="stationn">Station</string>
    <string name="day">Day</string>
    <string name="addRoute">Add Route</string>
    <string name="deleteRoute">Delete Route</string>
    <string name="finish">Finish, Start MUST bus</string>
    <string name="success">Successfully added new notification</string>

    <!-- For schedule detail page-->
    <string name="travelTime">Approximate travel time</string>
    <string name="tapanywhere">Tap anywhere to dismiss</string>
    <string name="minute">minutes</string>
    <string name="numberroute">Total round</string>
    <string name="sure">Are you sure you want to add this station in your notification list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- For route today page -->
    <string name="mondayy">MONDAY</string>
    <string name="tuesdayy">TUESDAY</string>
    <string name="wednesdayy">WEDNESDAY</string>
    <string name="thursdayy">THURSDAY</string>
    <string name="fridayy">FRIDAY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_signup_page">signup_page</string>
    <string name="title_activity_signin_page">signin_page</string>
    <string name="title_activity_choose_language">chooseLanguage</string>
    <string name="title_activity_create_edit_route">createEditRoute</string>
    <string name="SetNotification">Set Notification</string>
    <string name="TheBus">Time Table</string>
    <string name="SetNotiTime">Set your notification time</string>
    <string name="yourRouteStation">List of your route and station</string>
    <string name="technique">Technique</string>
    <string name="mu">Mahidol University</string>
    <string name="mustbususer">The Must Bus User</string>

    <string name="monday">Every Monday</string>
    <string name="tuesday">Every Tuesday</string>
    <string name="wednesday">Every Wednesday</string>
    <string name="thursday">Every Thursday</string>
    <string name="friday">Every Friday</string>

    <string-array name="eng_days_array">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
    </string-array>

    <string-array name="thai_days_array">
        <item>ทุกวันจันทร์</item>
        <item>ทุกวันอังคาร</item>
        <item>ทุกวันพุธ</item>
        <item>ทุกวันพฤหัสบดี</item>
        <item>ทุกวันศุกร์</item>
    </string-array>
    <string name="title_activity_choose_day">chooseDay</string>
    <string name="setDay">Set Days</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Notification</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_navigation_setting">NavigationSetting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
