<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:id="@+id/routeText"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textSize="14dp"
        android:textColor="#06365a"
        android:text="Sayala to Phayathai"
        android:textAlignment="gravity"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView5" />


    <TextView
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:id="@+id/textView5"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#06365a"
        android:layout_below="@+id/routeText"
        android:layout_alignParentStart="true"
        android:text="@string/station"/>

    <TextView
        android:layout_width="175dp"
        android:layout_height="20dp"
        android:id="@+id/stationText"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textSize="14dp"
        android:textColor="#06365a"
        android:text="Faculty of Science Building"
        android:layout_below="@+id/routeText"
        android:gravity="center_vertical"
        android:layout_alignEnd="@+id/textView4"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:id="@+id/textView4"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="#06365a"
        android:text="@string/notify"
        android:layout_alignTop="@+id/routeText"
        android:layout_toEndOf="@+id/routeText" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:id="@+id/roundText"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textAlignment="gravity"
        android:textSize="14dp"
        android:textColor="#06365a"
        android:layout_gravity="left"
        android:text="6:40"
        android:gravity="center_vertical"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/stationText" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:id="@+id/text"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textSize="14dp"
        android:textAlignment="gravity"
        android:textColor="#06365a"
        android:text="@string/at"
        android:layout_gravity="left"
        android:layout_below="@+id/stationText"
        android:layout_toEndOf="@+id/roundText"
        android:layout_marginTop="1dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:id="@+id/notifydayText"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textSize="10dp"
        android:textAlignment="gravity"
        android:textColor="#06365a"
        android:text="Every Monday\nEvery Tuesday"
        android:layout_gravity="left"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/roundText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginTop="2dp" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:id="@+id/textView7"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#06365a"
        android:text="@string/round"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:id="@+id/textView3"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#06365a"
        android:text="@string/route"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:id="@+id/notidyTimeText"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:textSize="14dp"
        android:textAlignment="gravity"
        android:textColor="#06365a"
        android:text="5:10"
        android:layout_gravity="left"
        android:layout_alignTop="@+id/text"
        android:layout_toEndOf="@+id/text" />

</RelativeLayout>